--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "http-errors": "^1.6.3",
     "morgan": "^1.9.1",
     "mysql": "^2.16.0",
+    "nodemailer": "^4.7.0",
     "path": "^0.12.7",
     "serve-favicon": "^2.5.0"
   }
